# server-script

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  rust.yml
src/: backup.rs  cli.rs  config.rs  lib.rs  main.rs  protocol.rs  web.rs
src/backup/: mod.rs
src/config/: mod.rs
src/util/: eula.rs  java_util.rs  logger.rs  mod.rs  paper_api.rs  progress_bar.rs  runner_util.rs
src/web/: mod.rs
